# langchain-demo

./: .gitignore  README.md  config.env_demo  pyproject.toml
.github/workflows/: deploy.yml
.skills/article-writer/: SKILL.md  prompt.pt
basic00/: HelloLangChain.py
basic01-model/: MultiTurnInvoke.py  SimpleBatch.py  SimpleInvoke.py  SimpleStream.py  StructOutput.py  ToolCalling.py  __init__.py
basic01-model/scene/: StreamScene.py
basic02-message/: BasicMessages.py  BasicPrompt.py  MessageComprehensiveDemo.py  MustacheTemplateDemo.py  __init__.py
basic03-tools/: AdvancedSchemaTools.py  BasicToolDefinition.py  README.md
basic04-agents/: AdvancedToolsInAgents.py  BasicAgents.py  DynamicToolsInAgents.py  __init__.py
docs/: 00-project-setup-foundations.md  05-tool-calling-empowerment.md  README.md  _sidebar.md  index.html  sidebar.md
docs/C1/: 01-basic-sync-invocation.md  02-batch-processing-optimization.md  03-streaming-call-experience.md  04-multi-turn-dialogue-management.md  06-structured-output-guide.md  07-prompt-engineering-guide.md  08-message-system-fundamentals.md  09-tool-message-advanced.md
docs/C2/: 01-basic-tools-definition-guide.md  02-tool-schema-advanced-guide.md
docs/C3/: 01-basic-agents-usage-guide.md  02-agents-tools-advanced-guide.md
