[project]
name = "langchain-demo"
version = "0.1.0"
description = "LangChain 示例项目"
authors = [{ name = "一灰灰", email = "bangzewu@126.com" }]
dependencies = [
    "langchain-openai>=1.1.7",
    "python-dotenv>=1.2.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]